pagination code rework in the PostedListingsContainer. PostedListingListViewCard fix in order to align card details

--- a/src/index.css
+++ b/src/index.css
@@ -493,6 +493,13 @@ main {
   box-shadow: 0px 4px 26px 0px rgba(66, 71, 76, 0.0784313725);
 }
 
+.list-card .list-card-info-1,
+.list-card .list-card-info-2,
+.list-card .list-card-info-3,
+.list-card .list-card-info-4{
+  width: 165px;
+}
+
 .list-card p {
   font-size: 0.85rem;
 }
